Update : 18/May/2018
  * htdocs::ExportSettings.php
    - bugfixes: status='Active' for Inst or Provider exports threw errors into CSV
  * htdocs::ReportHome.php
    - added INST argument to ccp_get_alerts() call to match new set of expected args
  * htdocs/include::Manage_Prov.js
    - provider ID updated when Provider choice changes
  * libraries::dbutils.inc.php
    - new, optional arguments added to ccp_get_alerts, ccp_get_reports, ccp_providers
Update : 15/May/2018
  * htdocs::UpdateUser.php
    - bugfix when saving changes to 'Administrator' user settings
  * htdocs::ManageProvider.php
    - Add provider ID (readonly) to the display
  * libraries::helpers.inc.php
    - Added argument to print_page_header to allow suppression of upper-nav links
  * htdocs:: login.php, logout.php, ReportHome, ManualIngest, ReportDetail, IngestLog
    - changes to print_page_header() call
Update : 19/Apr/2018
  * htdocs::ImportSettings.php
    - remove "admin_userid" from import queries
  * htdocs::ExportSettings.php
    - remove "admin_userid" from export queries
  * htdocs/templates::Inst_settings_template.xls
    - Pull out "admin_userid" column and description from the template
Update : 10/Apr/2018
  * htdocs::ManageUser.php
    - suppress Role dropdown when editing/viewing own-profile settings
  * htdocs::UpdateAlerts.php
    - logic bugfix - assigning role for new user threw an error
Update : 06/Apr/2018
  * agents/nightly::Sushi_ingest.php
    - call to ccp_record_ingest() needed $_db argument
  * libraries::statsutils.inc.php
    - ccp_record_ingest now fails silently if no $_DB argument and no SESSION set
Update : 05/Apr/2018
  * agents::CheckManual.php
    - script was not adding record to ingest record (database table) on success
    - added schema test to ensure that "new" columns in manually ingested reports
      get created in the main data table before trying to move records
  * agents::nightly/CCP_nightly.sh